[tool.poetry]
name = "wiki"
version = "0.1.0"
description = "Discover all about my note space"
authors = ["Anurag Dhadse <hello@adhadse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.5.38"}
mkdocs-glightbox = "^0.4.0"
mkdocs-material-extensions = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
